[package]
name = "keccakf"
version = "0.1.3"
description = "An implementation of the keccak-F[1600,800,400,200]."
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2018"
homepage = "https://github.com/tiannian/keccakf"
repository = "https://github.com/tiannian/keccakf"
readme = "README.md"
license = "CC0-1.0"
categories = ["cryptography", "no-std"]

[dependencies]
crunchy = "0.2.2"
